Add album caption and subreddit name